# prefixed-api-key

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  readme.md
.github/workflows/: tests.yml
examples/cli/: .gitignore  Cargo.toml  pak_config.toml.example  readme.md
examples/cli/src/: command_check.rs  command_generate.rs  config.rs  main.rs
src/: controller.rs  controller_alias.rs  controller_builder.rs  lib.rs  prefixed_api_key.rs
