[package]
name = "prefixed-api-key"
description = "A Rust module for generating a prefixed API Key"
author = ["Brahm Lower <contact@brahmlower.io>"]
homepage = "https://github.com/brahmlower/prefixed-api-key"
repository = "https://github.com/brahmlower/prefixed-api-key"
license = "MIT"
readme = "readme.md"
version = "0.1.0-beta.0"
edition = "2021"

[dependencies]
digest = "0.10.3"
bs58 = "0.4.0"
rand = "0.8.5"
hex = "0.4.3"
rust-crypto = "0.2.36"

[dev-dependencies]
sha2 = "0.10.2"
