[package]
name = "prefixed-api-key"
description = "A Rust module for generating a prefixed API Key"
authors = ["Brahm Lower <contact@brahmlower.io>"]
homepage = "https://github.com/brahmlower/prefixed-api-key"
repository = "https://github.com/brahmlower/prefixed-api-key"
documentation = "https://docs.rs/prefixed-api-key"
license = "MIT"
readme = "readme.md"
version = "0.1.0-beta.1"
edition = "2021"

[features]
sha2 = ["dep:sha2"]
all = ["sha2"]

[dependencies]
digest = "0.10.3"
bs58 = "0.4.0"
rand = "0.8.5"
hex = "0.4.3"
sha2 = { version = "0.10.2", optional = true }
constant_time_eq = "0.2.5"

[dev-dependencies]
sha2 = "0.10.2"

[package.metadata.docs.rs]
# Enable all feature flags so that their docs are included
all-features = true
