[package]
name = "prefixed-api-key-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = "1.0.144"
serde_derive = "1.0.144"
clap = "3.2.18"
prefixed-api-key = { path = "../../", features = ["sha2"] }
